--- a/app/src/main/res/layout/activity_bus.xml
+++ b/app/src/main/res/layout/activity_bus.xml
@@ -11,6 +11,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
     <ImageView
         android:id="@+id/maps_location_icon"
         android:layout_width="55dp"
@@ -25,7 +26,8 @@
         android:focusable="true"
         android:scaleType="center"
         android:src="@drawable/ic_my_location_black_24dp"
-        android:tint="?android:textColor" />
+        android:tint="?android:textColor"
+        tools:ignore="UseAppTint" />
 
     <View
         android:id="@+id/shadow"
