--- a/app/src/main/res/layout/activity_detour_info.xml
+++ b/app/src/main/res/layout/activity_detour_info.xml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.VegaSolutions.lpptransit.ui.activities.forum.DetourInfoActivity">
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:padding="25dp"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/posted_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/posted_time"
-            android:layout_alignParentRight="true"/>
-
+            android:layout_alignParentEnd="true" />
 
         <RelativeLayout
             android:id="@+id/rl_icon"
@@ -26,8 +23,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:src="@drawable/logo_small_lpp"
-                />
+                android:src="@drawable/logo_small_lpp" />
         </RelativeLayout>
 
         <TextView
@@ -38,9 +34,8 @@
             android:text="@string/lpp_main_name"
             android:textSize="12sp"
             android:textStyle="bold"
-            android:layout_toRightOf="@+id/rl_icon"
+            android:layout_toEndOf="@+id/rl_icon"
             android:layout_marginTop="13dp" />
-
     </RelativeLayout>
 
 </ScrollView>
