--- a/app/src/main/res/layout/activity_detur.xml
+++ b/app/src/main/res/layout/activity_detur.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,10 +18,10 @@
             android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
-            android:layout_marginLeft="5dp"
             android:padding="7dp"
             android:src="@drawable/ic_back_arrow"
-            app:tint="?android:textColor" />
+            android:tint="?android:textColor"
+            tools:ignore="UseAppTint" />
 
         <TextView
             android:id="@+id/tv_detours"
@@ -49,7 +48,7 @@
     </RelativeLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swiperefresh"
+        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/tv_where_is_data_from"
@@ -62,12 +61,11 @@
             tools:listitem="@layout/detours_rv_item" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-
     <View
         android:id="@+id/bottom_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@id/swiperefresh"
+        android:layout_below="@id/swipe_refresh"
         android:background="@android:color/black"
         android:backgroundTint="@color/light_gray" />
 
