--- a/app/src/main/res/layout/activity_main_bottom.xml
+++ b/app/src/main/res/layout/activity_main_bottom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
@@ -17,7 +18,8 @@
         android:focusable="true"
         android:scaleType="center"
         android:src="@drawable/ic_my_location_black_24dp"
-        android:tint="?android:textColor" />
+        android:tint="?android:textColor"
+        tools:ignore="UseAppTint" />
     <com.VegaSolutions.lpptransit.ui.errorhandlers.TopMessage
         android:id="@+id/top_message"
         android:layout_width="match_parent"
