--- a/app/src/main/res/layout/activity_route_bottom.xml
+++ b/app/src/main/res/layout/activity_route_bottom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,7 +19,8 @@
         android:focusable="true"
         android:scaleType="center"
         android:src="@drawable/ic_my_location_black_24dp"
-        android:tint="?android:textColor" />
+        android:tint="?android:textColor"
+        tools:ignore="UseAppTint" />
 
     <View
         android:id="@+id/shadow"
@@ -68,7 +70,8 @@
                     android:tint="?android:textColor"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="UseAppTint" />
 
                 <include
                     android:id="@+id/route_circle"
@@ -139,8 +142,6 @@
             app:layout_constraintTop_toBottomOf="@+id/header" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
     <com.VegaSolutions.lpptransit.ui.errorhandlers.TopMessage
         android:id="@+id/loading_msg"
