--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -32,10 +32,11 @@
                 android:backgroundTint="?backgroundViewColor"
                 android:scaleType="center"
                 android:src="@drawable/ic_arrow_back_black_24dp"
+                android:tint="?android:textColor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="?android:textColor" />
+                tools:ignore="UseAppTint" />
 
             <TextView
                 android:id="@+id/textView"
