--- a/app/src/main/res/layout/detours_rv_item.xml
+++ b/app/src/main/res/layout/detours_rv_item.xml
@@ -4,7 +4,7 @@
     android:id="@+id/rl_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?backgroundViewColor"
+    android:background="?android:attr/selectableItemBackground"
     android:paddingLeft="24dp"
     android:paddingTop="20dp"
     android:paddingRight="24dp">
