--- a/app/src/main/res/layout/template_arrival_time.xml
+++ b/app/src/main/res/layout/template_arrival_time.xml
@@ -8,9 +8,9 @@
     android:layout_marginTop="?containerBorderPadding"
     android:layout_marginEnd="?containerBorderPaddingSide"
     android:layout_marginBottom="?containerBorderPadding"
-    android:padding="2dp"
+    android:background="@drawable/stretched_circle_container"
 
-    android:background="@drawable/stretched_circle_container">
+    android:padding="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/arrival_time_back"
@@ -58,7 +58,7 @@
             app:layout_constraintStart_toEndOf="@+id/arrival_time_time"
             app:layout_constraintTop_toTopOf="@+id/arrival_time_time" />
 
-        6<ImageView
+        <ImageView
             android:id="@+id/arrival_time_event_rss"
             android:layout_width="18dp"
             android:layout_height="18dp"
@@ -69,8 +69,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/arrival_time_event"
             app:layout_constraintTop_toTopOf="@+id/arrival_time_time"
-            app:layout_constraintVertical_bias="0.0" />
-
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="UseAppTint" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
