--- a/app/src/main/res/layout/template_live_arrival.xml
+++ b/app/src/main/res/layout/template_live_arrival.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/live_arrival_ll"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -44,7 +45,8 @@
             android:paddingTop="4dp"
             android:paddingEnd="4dp"
             android:src="@drawable/ic_bookmark_border_24px"
-            app:tint="?android:textColor" />
+            android:tint="?android:textColor"
+            tools:ignore="UseAppTint" />
     </LinearLayout>
 
     <com.google.android.flexbox.FlexboxLayout
