Improve dark UI.

--- a/app/src/main/res/layout/fragment_live_arrival.xml
+++ b/app/src/main/res/layout/fragment_live_arrival.xml
@@ -9,6 +9,10 @@
         android:id="@+id/live_arrival_swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:context=".ui.fragments.lpp.LiveArrivalFragment">
 
         <androidx.recyclerview.widget.RecyclerView
