--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -13,4 +13,5 @@
     <attr name="containerBorderPadding" format="dimension" />
     <attr name="containerBorderPaddingSide" format="dimension" />
     <attr name="elevation" format="dimension" />
+    <attr name="backgroundElevatedColor" format="reference"/>
 </resources>
