--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -27,15 +27,12 @@
         <item name="android:textColor">@color/color_text_dark</item>
         <item name="containerBackground">@drawable/stretched_circle</item>
         <item name="containerBorderColor">@color/light_gray_2</item>
-        <item name="containerBorderMargin">0dp</item>
-        <item name="containerBorderPadding">3dp</item>
-        <item name="containerBorderPaddingSide">4dp</item>
         <item name="android:editTextColor">@android:color/white</item>
         <item name="android:textColorHint">#ffA2A2A2</item>
         <item name="dividerColor">@color/divider_dark</item>
         <item name="colorPrimaryDark">@color/color_main_background_dark</item>
-        <item name="elevation">0dp</item>
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:windowBackground">@color/color_main_background_dark</item>
+        <item name="backgroundElevatedColor">@color/color_main_background_dark_elevated</item>
     </style>
 </resources>
