--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,7 @@
         <item name="android:textColorHint">@color/text_hint</item>
         <item name="dividerColor">@color/light_gray</item>
         <item name="elevation">2dp</item>
+        <item name="backgroundElevatedColor">?backgroundViewColor</item>
     </style>
 
     <style name="WhiteTheme" parent="MyTheme"/>
@@ -34,14 +35,11 @@
         <item name="android:textColor">@color/color_text_dark</item>
         <item name="containerBackground">@drawable/stretched_circle</item>
         <item name="containerBorderColor">@color/light_gray_2</item>
-        <item name="containerBorderMargin">0dp</item>
-        <item name="containerBorderPadding">3dp</item>
-        <item name="containerBorderPaddingSide">4dp</item>
         <item name="android:editTextColor">@android:color/white</item>
         <item name="android:textColorHint">#ffA2A2A2</item>
         <item name="dividerColor">@color/divider_dark</item>
         <item name="android:windowBackground">@color/color_main_background_dark</item>
-        <item name="elevation">0dp</item>
+        <item name="backgroundElevatedColor">@color/color_main_background_dark_elevated</item>
     </style>
 
     <style name="robotoBoldTitle">
