--- a/app/src/main/res/layout/template_arrival_time.xml
+++ b/app/src/main/res/layout/template_arrival_time.xml
@@ -58,6 +58,7 @@
             app:layout_constraintStart_toEndOf="@+id/arrival_time_time"
             app:layout_constraintTop_toTopOf="@+id/arrival_time_time" />
 
+        <!--
         <ImageView
             android:id="@+id/arrival_time_event_rss"
             android:layout_width="18dp"
@@ -70,6 +71,21 @@
             app:layout_constraintStart_toEndOf="@+id/arrival_time_event"
             app:layout_constraintTop_toTopOf="@+id/arrival_time_time"
             app:layout_constraintVertical_bias="0.0"
+            tools:ignore="UseAppTint" />
+            -->
+        <View
+            android:id="@+id/arrival_time_event_rss"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/circle"
+            android:backgroundTint="@color/colorAccent"
+            app:layout_constraintBottom_toBottomOf="@+id/arrival_time_time"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/arrival_time_event"
+            app:layout_constraintTop_toTopOf="@+id/arrival_time_time"
+            app:layout_constraintVertical_bias="0.444"
             tools:ignore="UseAppTint" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
