live icon changed

--- a/app/src/main/res/layout/template_arrival_time.xml
+++ b/app/src/main/res/layout/template_arrival_time.xml
@@ -48,7 +48,6 @@
             android:paddingTop="2dp"
             android:paddingEnd="6dp"
             android:paddingBottom="2dp"
-            android:text="v živo"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
             android:textSize="12sp"
@@ -56,15 +55,15 @@
             android:tint="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="@+id/arrival_time_time"
             app:layout_constraintStart_toEndOf="@+id/arrival_time_time"
-            app:layout_constraintTop_toTopOf="@+id/arrival_time_time" />
+            app:layout_constraintTop_toTopOf="@+id/arrival_time_time"
+            tools:text="v živo" />
 
-        <!--
         <ImageView
             android:id="@+id/arrival_time_event_rss"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_marginStart="4dp"
-            android:src="@drawable/ic_rss_feed_24px"
+            android:src="@drawable/ic_live"
             android:tint="?android:textColor"
             app:layout_constraintBottom_toBottomOf="@+id/arrival_time_time"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,21 +71,7 @@
             app:layout_constraintTop_toTopOf="@+id/arrival_time_time"
             app:layout_constraintVertical_bias="0.0"
             tools:ignore="UseAppTint" />
-            -->
-        <View
-            android:id="@+id/arrival_time_event_rss"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:layout_marginStart="4dp"
-            android:background="@drawable/circle"
-            android:backgroundTint="@color/colorAccent"
-            app:layout_constraintBottom_toBottomOf="@+id/arrival_time_time"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/arrival_time_event"
-            app:layout_constraintTop_toTopOf="@+id/arrival_time_time"
-            app:layout_constraintVertical_bias="0.444"
-            tools:ignore="UseAppTint" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
