--- a/app/src/main/res/layout/template_live_arrival_special.xml
+++ b/app/src/main/res/layout/template_live_arrival_special.xml
@@ -23,11 +23,12 @@
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:alpha=".6"
-            android:src="@drawable/ic_rss_feed_2_24px"
+            android:src="@drawable/ic_live"
             android:tint="?android:textColor"
-            android:visibility="gone"
+            android:visibility="invisible"
             app:layout_constraintStart_toEndOf="@+id/arrival_time_time"
-            app:layout_constraintTop_toTopOf="@+id/arrival_time_time" />
+            app:layout_constraintTop_toTopOf="@+id/arrival_time_time"
+            tools:ignore="UseAppTint" />
 
         <TextView
             android:id="@+id/arrival_time_time"
@@ -36,12 +37,12 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:alpha=".6"
-            android:text="11 min"
             android:textColor="?android:textColor"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="11 min" />
 
         <TextView
             android:id="@+id/garage_text"
