--- a/app/src/main/res/drawable/tab_layout_bg.xml
+++ b/app/src/main/res/drawable/tab_layout_bg.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 <item>
     <shape android:shape="rectangle" >
-        <solid android:color="?backgroundViewColor" />
+        <solid android:color="@color/transparent" />
     </shape>
 </item>
 <item android:top="-2dp" android:right="-2dp" android:left="-2dp">
