--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,11 +27,10 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
-        android:background="@drawable/stretched_circle"
-        android:backgroundTint="?backgroundViewColor"
         android:clickable="true"
         android:focusable="true"
         app:cardCornerRadius="7dp"
+        app:cardBackgroundColor="?backgroundViewColor"
         app:cardElevation="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -45,9 +44,8 @@
                 android:id="@+id/account"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:background="@drawable/stretched_circle"
-                android:backgroundTint="?backgroundViewColor"
                 android:padding="8dp"
+                android:background="@color/transparent"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_menu_black_24dp"
                 android:tint="?android:textColor"
@@ -74,9 +72,8 @@
                 android:id="@+id/search"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:background="@drawable/stretched_circle"
-                android:backgroundTint="?backgroundViewColor"
                 android:scaleType="center"
+                android:background="@color/transparent"
                 android:src="@drawable/ic_search_black_24dp"
                 android:tint="?android:textColor"
                 app:layout_constraintBottom_toBottomOf="parent"
