--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -34,5 +34,6 @@
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:windowBackground">@color/color_main_background_dark</item>
         <item name="backgroundElevatedColor">@color/color_main_background_dark_elevated</item>
+        <item name="android:colorEdgeEffect">@color/divider_dark</item>
     </style>
 </resources>
