--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,7 @@
         <item name="dividerColor">@color/divider_dark</item>
         <item name="android:windowBackground">@color/color_main_background_dark</item>
         <item name="backgroundElevatedColor">@color/color_main_background_dark_elevated</item>
+        <item name="android:colorEdgeEffect">@color/divider_dark</item>
     </style>
 
     <style name="robotoBoldTitle">
