--- a/app/src/main/res/layout/template_departure_hour.xml
+++ b/app/src/main/res/layout/template_departure_hour.xml
@@ -41,7 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/circle"
-                    android:backgroundTint="@color/light_gray"
+                    android:backgroundTint="?departureHourColor"
                     android:gravity="center"
                     android:padding="4dp"
                     android:text="15"
@@ -65,6 +65,7 @@
             android:id="@+id/view2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:alpha="0"
             android:background="?dividerColor" />
 
     </LinearLayout>
