--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,4 +14,5 @@
     <attr name="containerBorderPaddingSide" format="dimension" />
     <attr name="elevation" format="dimension" />
     <attr name="backgroundElevatedColor" format="reference"/>
+    <attr name="departureHourColor" format="color" />
 </resources>
