--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,7 @@
         <item name="dividerColor">@color/light_gray</item>
         <item name="elevation">2dp</item>
         <item name="backgroundElevatedColor">?backgroundViewColor</item>
+        <item name="departureHourColor">@color/light_gray</item>
     </style>
 
     <style name="WhiteTheme" parent="MyTheme"/>
@@ -40,6 +41,7 @@
         <item name="dividerColor">@color/divider_dark</item>
         <item name="android:windowBackground">@color/color_main_background_dark</item>
         <item name="backgroundElevatedColor">@color/color_main_background_dark_elevated</item>
+        <item name="departureHourColor">#12FFFFFF</item>
         <item name="android:colorEdgeEffect">@color/divider_dark</item>
     </style>
 
