--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,6 +45,25 @@
         <item name="android:colorEdgeEffect">@color/divider_dark</item>
     </style>
 
+    <style name="WhiteAlert" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/text_hint</item>
+        <item name="android:textColorPrimary">@color/color_text</item>
+        <item name="android:actionMenuTextColor">@color/color_text</item>
+        <item name="textColorAlertDialogListItem">@color/color_text</item>
+        <item name="android:background">@color/color_main_background</item>
+        <item name="android:textColorSecondary">@color/color_text</item>
+    </style>
+
+    <style name="DarkAlert" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/text_hint</item>
+        <item name="android:textColorPrimary">@color/color_text_dark</item>
+        <item name="android:actionMenuTextColor">@color/color_text_dark</item>
+        <item name="textColorAlertDialogListItem">@color/color_text_dark</item>
+        <item name="android:background">@color/color_main_background_dark</item>
+    </style>
+
     <style name="robotoBoldTitle">
         <item name="android:fontFamily">@font/roboto_bold</item>
         <item name="android:textSize">30sp</item>
