--- a/app/src/main/res/layout/template_station_nearby.xml
+++ b/app/src/main/res/layout/template_station_nearby.xml
@@ -16,7 +16,6 @@
         android:layout_height="wrap_content"
         android:paddingBottom="4dp">
 
-
         <TextView
             android:id="@+id/station_nearby_name"
             android:layout_width="wrap_content"
@@ -25,9 +24,9 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="4dp"
             android:layout_weight="0"
-            android:text="Drama"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="Drama" />
 
         <ImageView
             android:id="@+id/route_favourite"
@@ -40,7 +39,8 @@
             android:background="@android:color/transparent"
             android:elevation="2dp"
             android:src="@drawable/ic_favorite_black_24dp"
-            android:tint="@color/colorAccent" />
+            android:tint="@color/colorAccent"
+            tools:ignore="UseAppTint" />
 
         <TextView
             android:id="@+id/station_nearby_center"
@@ -69,8 +69,8 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_weight="1"
-            android:text="149 m"
-            android:textAlignment="textEnd" />
+            android:textAlignment="textEnd"
+            tools:text="149 m" />
 
     </LinearLayout>
 
