--- a/app/src/main/res/drawable/infowindow_card_border.xml
+++ b/app/src/main/res/drawable/infowindow_card_border.xml
@@ -4,11 +4,11 @@
 
     <stroke
         android:width="2dp"
-        android:color="@color/gray" />
+        android:color="?dividerColor" />
     <padding
         android:left="0dp"
         android:top="0dp"
         android:right="0dp"
         android:bottom="0dp" />
-    <corners android:radius="10dp" />
+    <corners android:radius="6dp" />
 </shape>
