navigation bar color

--- a/app/src/main/res/layout/activity_station_bottom.xml
+++ b/app/src/main/res/layout/activity_station_bottom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/maps_location_icon"
@@ -28,7 +28,9 @@
         android:layout_height="16dp"
         android:background="@drawable/top_shadow_gradient"
         app:layout_anchor="@id/rootConstraint" />
-    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/rootConstraint"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rootConstraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
@@ -102,14 +104,14 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
-                    android:text="Navje"
                     android:textColor="?android:textColor"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/station_tab_layout"
                     app:layout_constraintEnd_toStartOf="@+id/station_center"
                     app:layout_constraintStart_toEndOf="@+id/back"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Navje" />
 
                 <TextView
                     android:id="@+id/station_center"
