--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -37,5 +37,6 @@
         <item name="backgroundElevatedColor">@color/color_main_background_dark_elevated</item>
         <item name="android:colorEdgeEffect">@color/divider_dark</item>
         <item name="departureHourColor">#12FFFFFF</item>
+        <item name="android:navigationBarColor">@color/color_main_background_dark</item>
     </style>
 </resources>
