--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,7 +29,9 @@
         <item name="departureHourColor">@color/light_gray</item>
     </style>
 
-    <style name="WhiteTheme" parent="MyTheme"/>
+    <style name="WhiteTheme" parent="MyTheme">
+        <item name="android:navigationBarColor">@color/white</item>
+    </style>
 
     <style name="DarkTheme" parent="MyTheme">
         <item name="backgroundViewColor">@color/color_main_background_dark</item>
@@ -43,6 +45,7 @@
         <item name="backgroundElevatedColor">@color/color_main_background_dark_elevated</item>
         <item name="departureHourColor">#12FFFFFF</item>
         <item name="android:colorEdgeEffect">@color/divider_dark</item>
+        <item name="android:navigationBarColor">@color/color_main_background_dark</item>
     </style>
 
     <style name="WhiteAlert" parent="Theme.AppCompat.Light.Dialog">
